workshop03/appv1-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: appv1-svc
  labels:
    name: appv1-svc
    version: v1

spec:
  selector:
    name: app-pod
    version: v1
  type: ClusterIP
  ports:
  - name: myappv1-port
    port: 80
    targetPort: app-port
